fix(mockups): wrap lines.
keep text in the left-hand
text window from flowing
into the adjacent div,
so that it isn't obscured.

--- a/mockups/reader.css
+++ b/mockups/reader.css
@@ -1,6 +1,7 @@
 span{
 
     padding: 2pt;
+
 }
 
 #inputFile{
@@ -10,13 +11,14 @@ span{
 
 #fileContents{
 
-
     top: 10%;
     left: 0;
     width: 50%;
     height: 100%;
     
     position: fixed;
+
+    overflow-wrap: break-word;
 }
 
 #tripleStore{
